--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ gateway.ip=192.168.0.101
 token.expiration.time=864000000
 token.secret=lkfslkdfhj3l4234lkfjsddfw2
 login.url.path=/users/login
+
+spring.config.import=optional:configserver:http://localhost:8012
