--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ token.secret=lkfslkdfhj3l4234lkfjsddfw2
 login.url.path=/users/login
 
 spring.config.import=optional:configserver:http://localhost:8012
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=password
