Spring cloud config - file system backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ token.expiration.time=864000000
 token.secret=lkfslkdfhj3l4234lkfjsddfw2
 login.url.path=/users/login
 
-spring.config.import=optional:configserver:http://localhost:8012
+#not needed for now
+#spring.config.import=optional:configserver:http://localhost:8012
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
